--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EAS Tracker</title>
-  <link rel="stylesheet" href="/public/style.css"/>
+  <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
   <div id="app">
@@ -13,10 +13,10 @@
     <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
-      <form id="loginForm" novalidate class="row">
-        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password"/>
-        <button id="loginBtn" type="button" class="btn">Login</button>
-      </form>
+      <div class="row">
+        <input id="pw" type="password" class="input" placeholder="Password"/>
+        <button id="loginBtn" class="btn">Login</button>
+      </div>
     </div>
 
     <!-- ================= MAIN APP ================= -->
@@ -34,7 +34,6 @@
 
         <!-- ============ DASHBOARD / HOME ============ -->
         <section id="home">
-          <!-- KPIs -->
           <div class="section">
             <h2>Overview</h2>
             <div class="kpis">
@@ -46,7 +45,6 @@
             </div>
           </div>
 
-          <!-- Total Stock & Ad Spend by Country -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
             <table id="stockByCountryTable" class="table">
@@ -55,12 +53,11 @@
               </thead>
               <tbody id="stockByCountryBody"></tbody>
               <tfoot>
-                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00 USD</th></tr>
+                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
               </tfoot>
             </table>
           </div>
 
-          <!-- Weekly Delivered -->
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
@@ -71,15 +68,13 @@
                 <button id="weeklySave" class="btn">Save</button>
                 <button id="weeklyReset" class="btn danger outline">Reset</button>
               </div>
-              <small>The grid shows all countries. Edit cells to add delivered pieces per day.</small>
             </div>
             <div class="table-scroll">
               <table id="weeklyTable" class="table compact">
                 <thead id="weeklyHead"></thead>
                 <tbody id="weeklyBody"></tbody>
                 <tfoot>
-                  <tr class="totals">
-                    <th>Totals</th>
+                  <tr class="totals"><th>Totals</th>
                     <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
                     <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
                     <th id="wAllT">0</th>
@@ -88,136 +83,19 @@
               </table>
             </div>
           </div>
-
-          <!-- Daily Advertising Spend -->
-          <div class="section">
-            <h2>Daily Advertising Spend</h2>
-            <div class="card">
-              <div class="row wrap">
-                <select id="adPlatform" class="input">
-                  <option value="facebook">Facebook</option>
-                  <option value="tiktok">TikTok</option>
-                  <option value="google">Google</option>
-                </select>
-                <select id="adProduct" class="input"></select>
-                <select id="adCountry" class="input"></select>
-                <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-                <button id="adSave" class="btn">Save/Replace</button>
-              </div>
-              <small>Saving with the same product + platform + country replaces the previous value.</small>
-            </div>
-          </div>
-
-          <!-- Stock Movement -->
-          <div class="section">
-            <h2>Stock Movement</h2>
-            <div class="card">
-              <div class="row wrap">
-                <select id="mvFrom" class="input"></select>
-                <span>→</span>
-                <select id="mvTo" class="input"></select>
-                <select id="mvProduct" class="input"></select>
-                <input id="mvQty" type="number" class="input" placeholder="Qty" min="0"/>
-                <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-                <button id="mvAdd" class="btn">Add Movement</button>
-              </div>
-            </div>
-          </div>
-
-          <!-- Transit China → Kenya -->
-          <div class="section">
-            <h2>Transit (China → Kenya)</h2>
-            <table class="table" id="shipCK">
-              <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-              </tr></thead>
-              <tbody id="shipCKBody"></tbody>
-            </table>
-          </div>
-
-          <!-- Transit Inter-country -->
-          <div class="section">
-            <h2>Transit (Inter-country)</h2>
-            <table class="table" id="shipIC">
-              <thead><tr>
-                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-              </tr></thead>
-              <tbody id="shipICBody"></tbody>
-            </table>
-          </div>
-
-          <!-- Profit by Country -->
-          <div class="section">
-            <h2>Profit by Country</h2>
-            <div class="row wrap">
-              <select id="pcCountry" class="input"><option value="">All countries</option></select>
-              <input id="pcStart" type="date" class="input"/>
-              <input id="pcEnd" type="date" class="input"/>
-              <button id="pcRun" class="btn">Run</button>
-            </div>
-            <table class="table" id="profitCountry">
-              <thead><tr>
-                <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
-              </tr></thead>
-              <tbody id="profitCountryBody"></tbody>
-              <tfoot>
-                <tr class="totals">
-                  <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
-
-          <!-- To-Do + Weekly To-Do -->
-          <div class="section">
-            <h2>To-Do</h2>
-            <div class="row">
-              <input id="todoText" class="input" placeholder="Task"/>
-              <button id="todoAdd" class="btn">Add</button>
-            </div>
-            <div id="todoList" class="todo-list"></div>
-          </div>
-
-          <div class="section">
-            <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks"></div>
-          </div>
-
-          <!-- Lifetime Product Performance (global) -->
-          <div class="section">
-            <h2>Lifetime Product Performance</h2>
-            <div class="row wrap">
-              <select id="lpProduct" class="input"><option value="">All products</option></select>
-              <input id="lpStart" type="date" class="input"/>
-              <input id="lpEnd" type="date" class="input"/>
-              <button id="lpRun" class="btn">Run</button>
-            </div>
-            <table class="table" id="lifetimeTable">
-              <thead><tr>
-                <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-              </tr></thead>
-              <tbody id="lifetimeBody"></tbody>
-              <tfoot>
-                <tr class="totals"><th colspan="2">Totals</th>
-                  <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
         </section>
 
         <!-- ============ PRODUCTS ============ -->
         <section id="products" style="display:none">
           <h2>Products</h2>
-
           <div class="card">
             <div class="h">Add Product</div>
             <div class="row wrap">
               <input id="pName" class="input" placeholder="Name"/>
               <input id="pSku" class="input" placeholder="SKU"/>
-              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" min="0" step="0.01"/>
-              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" min="0" step="0.01"/>
-              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01"/>
+              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
+              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" step="0.01"/>
+              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" step="0.01"/>
               <button id="pAdd" class="btn">Add</button>
             </div>
           </div>
@@ -226,6 +104,7 @@
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody></tbody>
           </table>
+          <small>Click <b>Open</b> to view a product’s own page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
         <!-- ============ PERFORMANCE ============ -->
@@ -262,9 +141,9 @@
               <select id="rProduct" class="input"></select>
               <input id="rOrders" type="number" class="input" placeholder="Orders" min="0"/>
               <input id="rPieces" type="number" class="input" placeholder="Pieces" min="0"/>
-              <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
-              <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
-              <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
+              <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" step="0.01"/>
+              <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" step="0.01"/>
+              <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
             <div id="rMsg" class="muted"></div>
@@ -274,7 +153,6 @@
         <!-- ============ FINANCE ============ -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
-
           <div class="card big-balance">
             <div class="h">Running Balance (All-time)</div>
             <div id="runBalance" class="balance">0.00 USD</div>
@@ -311,7 +189,7 @@
                 <option value="credit">Credit</option>
               </select>
               <select id="feCat" class="input"></select>
-              <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+              <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
             </div>
@@ -333,7 +211,6 @@
         <!-- ============ SETTINGS ============ -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
-
           <div class="card">
             <div class="h">Countries</div>
             <div class="row">
@@ -341,6 +218,7 @@
               <button id="ctyAdd" class="btn">Add</button>
             </div>
             <div id="ctyList" class="chips deletable"></div>
+            <small class="muted">China cannot be deleted and will not appear in remittances.</small>
           </div>
 
           <div class="card">
@@ -368,12 +246,11 @@
             </table>
           </div>
         </section>
+      </div>
+    </div>
+  </div>
 
-      </div><!-- /container -->
-    </div><!-- /main -->
-  </div><!-- /app -->
-
-  <!-- JS -->
-  <script src="/public/app.js" defer></script>
+  <script src="/public/app.js"></script>
+  <script src="/public/snapshot.js"></script>
 </body>
 </html>
