--- a/product.html
+++ b/product.html
@@ -8,185 +8,173 @@
 </head>
 <body>
   <div class="container">
+
+    <!-- Header / Back -->
     <nav class="nav">
-      <a href="/" class="active">← Back to Dashboard</a>
+      <a href="/" class="active">← Dashboard</a>
       <span class="nav-right"><a id="logoutLink">Logout</a></span>
     </nav>
 
-    <!-- Product Header -->
+    <!-- Product header -->
     <section class="section">
-      <h2 id="pdTitle">Product</h2>
+      <h1 id="pdTitle">Product</h1>
       <div id="pdSku" class="muted"></div>
       <div id="pdTransitBadge" class="badge">Transit total: 0</div>
     </section>
 
-    <!-- 1) Stock & Ad Spend by Country (this product only) -->
+    <!-- Stock & Ad Spend by Country (THIS PRODUCT ONLY) -->
     <section class="section">
-      <div class="card">
-        <div class="h">Stock &amp; Ad Spend by Country</div>
-        <table class="table">
-          <thead>
-            <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend</th></tr>
-          </thead>
-          <tbody id="pdStockBody"></tbody>
-          <tfoot>
-            <tr class="totals">
-              <th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th>
-            </tr>
-          </tfoot>
-        </table>
-      </div>
+      <h2>Stock &amp; Ad Spend by Country</h2>
+      <table class="table">
+        <thead>
+          <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+        </thead>
+        <tbody id="pdStockBody"><!-- rows injected --></tbody>
+        <tfoot>
+          <tr class="totals"><th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr>
+        </tfoot>
+      </table>
     </section>
 
-    <!-- 2) Profit + Advertising Budget (manual, per country) -->
+    <!-- Profit + Advertising Budget (manual, per country) -->
     <section class="section">
+      <h2>Profit + Advertising Budget (manual, per country)</h2>
       <div class="card">
-        <div class="h">Profit + Advertising Budget (manual, per country)</div>
         <div class="row wrap">
-          <select id="pdPBCountry" class="input"></select>
-          <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" min="0" step="0.01"/>
+          <select id="pdPBCountry" class="input"><!-- countries injected --></select>
+          <input id="pdPBValue" class="input" type="number" step="0.01" min="0" placeholder="Budget (USD)"/>
           <button id="pdPBSave" class="btn">Save</button>
         </div>
-        <table class="table compact">
-          <thead><tr><th>Country</th><th>Budget</th><th></th></tr></thead>
-          <tbody id="pdPBBBody"></tbody>
-        </table>
-        <small class="muted">Manual input only. Not connected to ad spend totals.</small>
       </div>
+      <table class="table">
+        <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
+        <tbody id="pdPBBBody"><!-- rows injected --></tbody>
+      </table>
+      <small class="muted">This table is <b>manual</b>. Values here are for your reference and do not auto-sum from ad spend.</small>
     </section>
 
-    <!-- 3) Daily Ad Spend (replace) -->
+    <!-- Daily Advertising Spend (THIS PRODUCT ONLY) -->
     <section class="section">
+      <h2>Daily Advertising Spend</h2>
       <div class="card">
-        <div class="h">Daily Ad Spend (replace existing)</div>
         <div class="row wrap">
-          <select id="pdAdCountry" class="input"></select>
           <select id="pdAdPlatform" class="input">
             <option value="facebook">Facebook</option>
             <option value="tiktok">TikTok</option>
             <option value="google">Google</option>
           </select>
-          <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
-          <button id="pdAdSave" class="btn">Save</button>
+          <select id="pdAdCountry" class="input"><!-- countries injected --></select>
+          <input id="pdAdAmount" type="number" class="input" step="0.01" min="0" placeholder="Amount (USD)"/>
+          <button id="pdAdSave" class="btn">Save / Replace</button>
         </div>
-        <table class="table compact">
-          <thead><tr><th>Country</th><th>Platform</th><th>Amount</th></tr></thead>
-          <tbody id="pdAdBody"></tbody>
-        </table>
-        <small class="muted">Upserts by <b>product + country + platform</b>.</small>
+        <small>Saving again for the same <b>platform + country</b> replaces the previous value for this product.</small>
       </div>
+
+      <table class="table">
+        <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
+        <tbody id="pdAdBody"><!-- rows injected --></tbody>
+      </table>
     </section>
 
-    <!-- 4) Stock Movement -->
+    <!-- Shipments (THIS PRODUCT ONLY) -->
     <section class="section">
+      <h2>Shipments</h2>
       <div class="card">
-        <div class="h">Stock Movement (Create Shipment)</div>
         <div class="row wrap">
-          <select id="pdMvFrom" class="input"></select>
+          <select id="pdMvFrom" class="input"><!-- countries injected --></select>
           <span>→</span>
-          <select id="pdMvTo" class="input"></select>
+          <select id="pdMvTo" class="input"><!-- countries injected --></select>
           <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
           <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-          <button id="pdMvAdd" class="btn">Add Movement</button>
+          <button id="pdMvAdd" class="btn">Add Shipment</button>
         </div>
-        <small class="muted">When marked as arrived, stock is added to destination and deducted from origin.</small>
+        <small>When marked as arrived, the system adds to destination and deducts from origin.</small>
       </div>
+
+      <h3>China → Kenya</h3>
+      <table class="table">
+        <thead><tr>
+          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+        </tr></thead>
+        <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
+      </table>
+
+      <h3>Inter-country</h3>
+      <table class="table">
+        <thead><tr>
+          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+        </tr></thead>
+        <tbody id="pdShipICBody"><!-- rows injected --></tbody>
+      </table>
     </section>
 
-    <!-- 5) Transit (China → Kenya) -->
+    <!-- Lifetime (THIS PRODUCT ONLY, breakdown by country) -->
     <section class="section">
-      <div class="card">
-        <div class="h">Transit Shipments (China → Kenya)</div>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-              <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-            </tr>
-          </thead>
-          <tbody id="pdShipCKBody"></tbody>
-        </table>
+      <h2>Lifetime (This Product)</h2>
+      <div class="row wrap">
+        <input id="pdLPStart" type="date" class="input"/>
+        <input id="pdLPEnd" type="date" class="input"/>
+        <button id="pdLPRun" class="btn">Run</button>
       </div>
+      <table class="table">
+        <thead><tr>
+          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+        </tr></thead>
+        <tbody id="pdLPBody"><!-- rows injected --></tbody>
+        <tfoot>
+          <tr class="totals">
+            <th>Totals</th>
+            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
+            <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
+          </tr>
+        </tfoot>
+      </table>
     </section>
 
-    <!-- 6) Transit (Inter-country) -->
+    <!-- Influencers (THIS PRODUCT ONLY) -->
     <section class="section">
-      <div class="card">
-        <div class="h">Transit Shipments (Inter-country)</div>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th>
-              <th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-            </tr>
-          </thead>
-          <tbody id="pdShipICBody"></tbody>
-        </table>
-      </div>
-    </section>
+      <h2>Influencers</h2>
 
-    <!-- 7) Lifetime (This Product) -->
-    <section class="section">
       <div class="card">
-        <div class="h">Lifetime (This Product)</div>
+        <div class="h">Add Influencer</div>
         <div class="row wrap">
-          <input id="pdLPStart" type="date" class="input"/>
-          <input id="pdLPEnd" type="date" class="input"/>
-          <button id="pdLPRun" class="btn">Run</button>
+          <input id="pdInfName" class="input" placeholder="Name"/>
+          <input id="pdInfSocial" class="input" placeholder="Handle / Link"/>
+          <select id="pdInfCountry" class="input"><!-- countries injected --></select>
+          <button id="pdInfAdd" class="btn">Add</button>
         </div>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Country</th><th>Revenue</th><th>Ad Spend</th>
-              <th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-            </tr>
-          </thead>
-          <tbody id="pdLPBody"></tbody>
-          <tfoot>
-            <tr class="totals">
-              <th>Totals</th>
-              <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
-              <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
-            </tr>
-          </tfoot>
-        </table>
       </div>
-    </section>
 
-    <!-- 8) Influencers -->
-    <section class="section">
       <div class="card">
-        <div class="h">Influencer Spend</div>
+        <div class="h">Add Spend</div>
         <div class="row wrap">
-          <input id="pdInfName" class="input" placeholder="Influencer Name"/>
-          <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
-          <select id="pdInfCountry" class="input"></select>
-          <button id="pdInfAdd" class="btn">Add Influencer</button>
-        </div>
-        <div class="row wrap" style="margin-top:8px">
           <input id="pdInfDate" type="date" class="input"/>
-          <select id="pdInfSelect" class="input"></select>
-          <input id="pdInfAmount" type="number" class="input" placeholder="Spend (USD)" min="0" step="0.01"/>
+          <select id="pdInfSelect" class="input"><!-- influencers injected --></select>
+          <select id="pdInfCountry" class="input"><!-- countries injected (same id already above is fine) --></select>
+          <input id="pdInfAmount" type="number" class="input" step="0.01" min="0" placeholder="Amount (USD)"/>
           <button id="pdInfSpendAdd" class="btn">Add Spend</button>
         </div>
-        <div class="row wrap" style="margin-top:8px">
+      </div>
+
+      <div class="card">
+        <div class="h">Filter</div>
+        <div class="row wrap">
           <input id="pdInfStart" type="date" class="input"/>
           <input id="pdInfEnd" type="date" class="input"/>
           <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
-          <button id="pdInfRun" class="btn outline">Filter</button>
+          <button id="pdInfRun" class="btn outline">Run</button>
+          <div class="badge">Total: <span id="pdInfTotal">0</span> USD</div>
         </div>
-        <table class="table compact">
-          <thead><tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount</th><th></th></tr></thead>
-          <tbody id="pdInfBody"></tbody>
-          <tfoot>
-            <tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr>
-          </tfoot>
-        </table>
       </div>
+
+      <table class="table">
+        <thead><tr><th>Date</th><th>Country</th><th>Name</th><th>Social</th><th>Amount</th><th></th></tr></thead>
+        <tbody id="pdInfBody"><!-- rows injected --></tbody>
+      </table>
     </section>
+
   </div>
 
   <script src="/public/app.js"></script>
-  <script src="/public/snapshot.js"></script>
 </body>
 </html>
