--- a/product.html
+++ b/product.html
@@ -7,108 +7,133 @@
   <link rel="stylesheet" href="/public/styles.css"/>
 </head>
 <body>
-  <div class="container">
+  <div class="topbar">
+    <a href="/" class="btn outline">← Back</a>
+    <div class="spacer"></div>
+    <a id="logoutLink" class="btn outline">Logout</a>
+  </div>
 
-    <!-- Header / Back -->
-    <nav class="nav">
-      <a href="/" class="active">← Dashboard</a>
-      <span class="nav-right"><a id="logoutLink">Logout</a></span>
-    </nav>
-
-    <!-- Product header -->
-    <section class="section">
+  <main class="container">
+    <!-- Header -->
+    <header class="section">
       <h1 id="pdTitle">Product</h1>
       <div id="pdSku" class="muted"></div>
       <div id="pdTransitBadge" class="badge">Transit total: 0</div>
-    </section>
+    </header>
 
-    <!-- Stock & Ad Spend by Country (THIS PRODUCT ONLY) -->
+    <!-- 1) Stock & Ad Spend by Country (THIS product only) -->
     <section class="section">
       <h2>Stock &amp; Ad Spend by Country</h2>
       <table class="table">
-        <thead>
-          <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
-        </thead>
-        <tbody id="pdStockBody"><!-- rows injected --></tbody>
+        <thead><tr>
+          <th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th>
+        </tr></thead>
+        <tbody id="pdStockBody"><!-- rows injected by app.js: renderProductStockAd() --></tbody>
         <tfoot>
-          <tr class="totals"><th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr>
+          <tr class="totals">
+            <th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th>
+          </tr>
         </tfoot>
       </table>
     </section>
 
-    <!-- Profit + Advertising Budget (manual, per country) -->
+    <!-- 2) Profit + Advertising Budget (manual, per country) -->
     <section class="section">
       <h2>Profit + Advertising Budget (manual, per country)</h2>
       <div class="card">
         <div class="row wrap">
-          <select id="pdPBCountry" class="input"><!-- countries injected --></select>
-          <input id="pdPBValue" class="input" type="number" step="0.01" min="0" placeholder="Budget (USD)"/>
+          <select id="pdPBCountry" class="input"></select>
+          <input id="pdPBValue" type="number" class="input" min="0" step="0.01" placeholder="Budget (USD)"/>
           <button id="pdPBSave" class="btn">Save</button>
         </div>
       </div>
       <table class="table">
         <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
-        <tbody id="pdPBBBody"><!-- rows injected --></tbody>
+        <tbody id="pdPBBBody"><!-- rows via renderPBTable() --></tbody>
       </table>
-      <small class="muted">This table is <b>manual</b>. Values here are for your reference and do not auto-sum from ad spend.</small>
     </section>
 
-    <!-- Daily Advertising Spend (THIS PRODUCT ONLY) -->
+    <!-- 3) Daily Advertising Spend (replace by product+country+platform) -->
     <section class="section">
       <h2>Daily Advertising Spend</h2>
       <div class="card">
         <div class="row wrap">
+          <select id="pdAdCountry" class="input"></select>
           <select id="pdAdPlatform" class="input">
             <option value="facebook">Facebook</option>
             <option value="tiktok">TikTok</option>
             <option value="google">Google</option>
           </select>
-          <select id="pdAdCountry" class="input"><!-- countries injected --></select>
-          <input id="pdAdAmount" type="number" class="input" step="0.01" min="0" placeholder="Amount (USD)"/>
+          <input id="pdAdAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
           <button id="pdAdSave" class="btn">Save / Replace</button>
         </div>
-        <small>Saving again for the same <b>platform + country</b> replaces the previous value for this product.</small>
+        <small>Same product+country+platform is replaced. These totals feed the Ad Spend columns above.</small>
       </div>
-
       <table class="table">
         <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
-        <tbody id="pdAdBody"><!-- rows injected --></tbody>
+        <tbody id="pdAdBody"><!-- list via renderProductAdList() --></tbody>
       </table>
     </section>
 
-    <!-- Shipments (THIS PRODUCT ONLY) -->
+    <!-- 4) Remittance entries (for this product) -->
     <section class="section">
-      <h2>Shipments</h2>
+      <h2>Remittance Entries (This Product)</h2>
+      <p class="muted">Add new entries in: <b>Performance → Remittance Report</b>. You can delete entries here.</p>
+      <table class="table">
+        <thead><tr>
+          <th>Period</th><th>Country</th><th>Orders</th><th>Pieces</th><th>Revenue</th>
+          <th>Ad Spend</th><th>Extra/pc</th><th>Profit*</th><th></th>
+        </tr></thead>
+        <tbody id="pdRBody"><!-- via renderProductRemittances() --></tbody>
+        <tfoot>
+          <tr class="totals">
+            <th colspan="4">Totals</th>
+            <th id="pdRRevT">0</th><th id="pdRAdT">0</th><th id="pdRExtraT">0</th><th id="pdRProfitT">0</th><th></th>
+          </tr>
+        </tfoot>
+      </table>
+      <small class="muted">*Profit column here is revenue − ad spend − (extra/pc × pieces). Base product cost is included in Lifetime section below.</small>
+    </section>
+
+    <!-- 5) Stock Movement (This Product) -->
+    <section class="section">
+      <h2>Stock Movement</h2>
       <div class="card">
         <div class="row wrap">
-          <select id="pdMvFrom" class="input"><!-- countries injected --></select>
+          <select id="pdMvFrom" class="input"></select>
           <span>→</span>
-          <select id="pdMvTo" class="input"><!-- countries injected --></select>
+          <select id="pdMvTo" class="input"></select>
           <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
           <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-          <button id="pdMvAdd" class="btn">Add Shipment</button>
+          <button id="pdMvAdd" class="btn">Add Movement</button>
         </div>
-        <small>When marked as arrived, the system adds to destination and deducts from origin.</small>
+        <small>On arrival: <b>add to destination</b> and <b>deduct from origin</b>.</small>
       </div>
+    </section>
 
-      <h3>China → Kenya</h3>
+    <!-- 6) Transit (China→Kenya) for this product -->
+    <section class="section">
+      <h2>Transit (China → Kenya)</h2>
       <table class="table">
         <thead><tr>
           <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
         </tr></thead>
-        <tbody id="pdShipCKBody"><!-- rows injected --></tbody>
-      </table>
-
-      <h3>Inter-country</h3>
-      <table class="table">
-        <thead><tr>
-          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
-        </tr></thead>
-        <tbody id="pdShipICBody"><!-- rows injected --></tbody>
+        <tbody id="pdShipCKBody"><!-- via renderProductTransit() --></tbody>
       </table>
     </section>
 
-    <!-- Lifetime (THIS PRODUCT ONLY, breakdown by country) -->
+    <!-- 7) Transit (Inter-country) for this product -->
+    <section class="section">
+      <h2>Transit (Inter-country)</h2>
+      <table class="table">
+        <thead><tr>
+          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+        </tr></thead>
+        <tbody id="pdShipICBody"><!-- via renderProductTransit() --></tbody>
+      </table>
+    </section>
+
+    <!-- 8) Lifetime (This Product) -->
     <section class="section">
       <h2>Lifetime (This Product)</h2>
       <div class="row wrap">
@@ -118,9 +143,9 @@
       </div>
       <table class="table">
         <thead><tr>
-          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping (extra)</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
         </tr></thead>
-        <tbody id="pdLPBody"><!-- rows injected --></tbody>
+        <tbody id="pdLPBody"><!-- via renderProductLifetime() --></tbody>
         <tfoot>
           <tr class="totals">
             <th>Totals</th>
@@ -131,50 +156,64 @@
       </table>
     </section>
 
-    <!-- Influencers (THIS PRODUCT ONLY) -->
+    <!-- 9) Influencers -->
     <section class="section">
       <h2>Influencers</h2>
 
+      <!-- Add influencer -->
       <div class="card">
         <div class="h">Add Influencer</div>
         <div class="row wrap">
           <input id="pdInfName" class="input" placeholder="Name"/>
-          <input id="pdInfSocial" class="input" placeholder="Handle / Link"/>
-          <select id="pdInfCountry" class="input"><!-- countries injected --></select>
-          <button id="pdInfAdd" class="btn">Add</button>
+          <input id="pdInfSocial" class="input" placeholder="Social handle"/>
+          <select id="pdInfCountry" class="input"></select>
+          <button id="pdInfAdd" class="btn">Add Influencer</button>
         </div>
       </div>
 
+      <!-- Add spend -->
       <div class="card">
-        <div class="h">Add Spend</div>
+        <div class="h">Add Influencer Spend</div>
         <div class="row wrap">
           <input id="pdInfDate" type="date" class="input"/>
-          <select id="pdInfSelect" class="input"><!-- influencers injected --></select>
-          <select id="pdInfCountry" class="input"><!-- countries injected (same id already above is fine) --></select>
-          <input id="pdInfAmount" type="number" class="input" step="0.01" min="0" placeholder="Amount (USD)"/>
+          <select id="pdInfSelect" class="input"><!-- influencers filled by renderInfluencers() --></select>
+          <select id="pdInfCountrySpend" class="input"><!-- optional override; fallback to influencer.country --></select>
+          <input id="pdInfAmount" type="number" class="input" min="0" step="0.01" placeholder="Amount (USD)"/>
           <button id="pdInfSpendAdd" class="btn">Add Spend</button>
         </div>
       </div>
 
+      <!-- Filter + table -->
       <div class="card">
         <div class="h">Filter</div>
         <div class="row wrap">
           <input id="pdInfStart" type="date" class="input"/>
           <input id="pdInfEnd" type="date" class="input"/>
           <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
-          <button id="pdInfRun" class="btn outline">Run</button>
-          <div class="badge">Total: <span id="pdInfTotal">0</span> USD</div>
+          <button id="pdInfRun" class="btn">Run</button>
         </div>
       </div>
 
       <table class="table">
-        <thead><tr><th>Date</th><th>Country</th><th>Name</th><th>Social</th><th>Amount</th><th></th></tr></thead>
-        <tbody id="pdInfBody"><!-- rows injected --></tbody>
+        <thead><tr>
+          <th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Amount</th><th></th>
+        </tr></thead>
+        <tbody id="pdInfBody"><!-- rows via renderInfluencers() --></tbody>
+        <tfoot>
+          <tr class="totals"><th colspan="4">Total</th><th id="pdInfTotal">0</th><th></th></tr>
+        </tfoot>
       </table>
+
+      <!-- Influencer list (with delete) -->
+      <div class="card">
+        <div class="h">All Influencers</div>
+        <div id="pdInfList" class="chips deletable"><!-- built by renderInfluencers(); chips have data-del-influencer --></div>
+        <small class="muted">Deleting an influencer removes all their spends for this product across the system.</small>
+      </div>
     </section>
+  </main>
 
-  </div>
-
+  <!-- JS -->
   <script src="/public/app.js"></script>
 </body>
 </html>
